--- a/dashboard/templates/list_short_urls.html
+++ b/dashboard/templates/list_short_urls.html
@@ -28,7 +28,7 @@
                   <tr>
                       <th scope="row">{{forloop.counter}}</th>
                       <td> <a
-                              href="http://127.0.0.1:8000/s/{{link.short_url}}/">http://127.0.0.1:8000/s/{{link.short_url}}/</a>
+                              href="/s/{{link.short_url}}/">/s/{{link.short_url}}/</a>
                       </td>
                       <td> <a
                               href="{{link.full_url}}">{{link.full_url}}</a>
