--- a/dashboard/templates/short_url.html
+++ b/dashboard/templates/short_url.html
@@ -14,7 +14,7 @@
 
                 <h3 class="text-center mt-3">Shorten URL</h3>
                 <p class=" mt-3">Short URL: <a
-                        href="http://{{domain}}/s/{{link}}/">http://{{domain}}/s/{{link}}/</a></p>
+                        href="/s/{{link}}/">/s/{{link}}/</a></p>
                 <p class=" mt-3">Full URL: <a href="{{url_obj.full_url}}">{{url_obj.full_url}}</a></p>
 
                 <p class=" mt-3">Note: A Short URL will expire within 30 seconds</p>
